# connect-four

./: .env-example  .gitignore  .travis.yml  README.md  conf.py  pyproject.toml
chalice/: app.py
chalice/.chalice/: config.json
chalice/.chalice/deployed/: dev.json
chalice/chalicelib/: exceptions.py  models.py
chalice/chalicelib/templates/: base.html
chatGPT/: simple_version.py
game/: models.py
game/tests/: test_models.py
notebook/: Connect Four_feb-12-2023.ipynb  ConnectFour.ipynb
web/: app.py
web/templates/: base.html
web/tests/: conftest.py  test_web.py
