[tool.poetry]
name = "connect-four"
version = "0.1.0"
description = ""
authors = ["Ron Southwick <ronlsouthwick@gmail.com>"]
readme = "README.md"
packages = [{include = "connect_four"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"
greenlet = "^2.0.2" # required by gevent
gevent = "^22.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
